library/src/libqxmlstream.h

typedef struct QIODevice QIODevice;
typedef struct QXmlStreamAttribute QXmlStreamAttribute;
typedef struct QXmlStreamEntityDeclaration QXmlStreamEntityDeclaration;
typedef struct QXmlStreamEntityResolver QXmlStreamEntityResolver;
typedef struct QXmlStreamNamespaceDeclaration QXmlStreamNamespaceDeclaration;
typedef struct QXmlStreamNotationDeclaration QXmlStreamNotationDeclaration;
typedef struct QXmlStreamReader QXmlStreamReader;
QTLIBC_API QXmlStreamAttribute* QXmlStreamAttribute_new();
QTLIBC_API QXmlStreamAttribute* QXmlStreamAttribute_new2(libqt_string qualifiedName, libqt_string value);
QTLIBC_API QXmlStreamAttribute* QXmlStreamAttribute_new3(libqt_string namespaceUri, libqt_string name, libqt_string value);
QTLIBC_API QXmlStreamAttribute* QXmlStreamAttribute_new4(QXmlStreamAttribute* param1);
QTLIBC_API bool QXmlStreamAttribute_IsDefault(const QXmlStreamAttribute* self);
QTLIBC_API bool QXmlStreamAttribute_OperatorEqual(const QXmlStreamAttribute* self, QXmlStreamAttribute* other);
QTLIBC_API bool QXmlStreamAttribute_OperatorNotEqual(const QXmlStreamAttribute* self, QXmlStreamAttribute* other);
QTLIBC_API void QXmlStreamAttribute_OperatorAssign(QXmlStreamAttribute* self, QXmlStreamAttribute* param1);
QTLIBC_API QXmlStreamNamespaceDeclaration* QXmlStreamNamespaceDeclaration_new();
QTLIBC_API QXmlStreamNamespaceDeclaration* QXmlStreamNamespaceDeclaration_new2(libqt_string prefix, libqt_string namespaceUri);
QTLIBC_API bool QXmlStreamNamespaceDeclaration_OperatorEqual(const QXmlStreamNamespaceDeclaration* self, QXmlStreamNamespaceDeclaration* other);
QTLIBC_API bool QXmlStreamNamespaceDeclaration_OperatorNotEqual(const QXmlStreamNamespaceDeclaration* self, QXmlStreamNamespaceDeclaration* other);
QTLIBC_API QXmlStreamNotationDeclaration* QXmlStreamNotationDeclaration_new();
QTLIBC_API bool QXmlStreamNotationDeclaration_OperatorEqual(const QXmlStreamNotationDeclaration* self, QXmlStreamNotationDeclaration* other);
QTLIBC_API bool QXmlStreamNotationDeclaration_OperatorNotEqual(const QXmlStreamNotationDeclaration* self, QXmlStreamNotationDeclaration* other);
QTLIBC_API QXmlStreamEntityDeclaration* QXmlStreamEntityDeclaration_new();
QTLIBC_API bool QXmlStreamEntityDeclaration_OperatorEqual(const QXmlStreamEntityDeclaration* self, QXmlStreamEntityDeclaration* other);
QTLIBC_API bool QXmlStreamEntityDeclaration_OperatorNotEqual(const QXmlStreamEntityDeclaration* self, QXmlStreamEntityDeclaration* other);
QTLIBC_API libqt_string QXmlStreamEntityResolver_ResolveEntity(QXmlStreamEntityResolver* self, libqt_string publicId, libqt_string systemId);
QTLIBC_API libqt_string QXmlStreamEntityResolver_ResolveUndeclaredEntity(QXmlStreamEntityResolver* self, libqt_string name);
QTLIBC_API QXmlStreamReader* QXmlStreamReader_new();
QTLIBC_API QXmlStreamReader* QXmlStreamReader_new2(QIODevice* device);
QTLIBC_API QXmlStreamReader* QXmlStreamReader_new3(libqt_string data);
QTLIBC_API QXmlStreamReader* QXmlStreamReader_new4(libqt_string data);
QTLIBC_API QXmlStreamReader* QXmlStreamReader_new5(const char* data);
QTLIBC_API void QXmlStreamReader_SetDevice(QXmlStreamReader* self, QIODevice* device);
QTLIBC_API QIODevice* QXmlStreamReader_Device(const QXmlStreamReader* self);
QTLIBC_API void QXmlStreamReader_AddData(QXmlStreamReader* self, libqt_string data);
QTLIBC_API void QXmlStreamReader_AddDataWithData(QXmlStreamReader* self, libqt_string data);
QTLIBC_API void QXmlStreamReader_AddData2(QXmlStreamReader* self, const char* data);
QTLIBC_API void QXmlStreamReader_Clear(QXmlStreamReader* self);
QTLIBC_API bool QXmlStreamReader_AtEnd(const QXmlStreamReader* self);
QTLIBC_API int QXmlStreamReader_ReadNext(QXmlStreamReader* self);
QTLIBC_API bool QXmlStreamReader_ReadNextStartElement(QXmlStreamReader* self);
QTLIBC_API void QXmlStreamReader_SkipCurrentElement(QXmlStreamReader* self);
QTLIBC_API int QXmlStreamReader_TokenType(const QXmlStreamReader* self);
QTLIBC_API libqt_string QXmlStreamReader_TokenString(const QXmlStreamReader* self);
QTLIBC_API void QXmlStreamReader_SetNamespaceProcessing(QXmlStreamReader* self, bool namespaceProcessing);
QTLIBC_API bool QXmlStreamReader_NamespaceProcessing(const QXmlStreamReader* self);
QTLIBC_API bool QXmlStreamReader_IsStartDocument(const QXmlStreamReader* self);
QTLIBC_API bool QXmlStreamReader_IsEndDocument(const QXmlStreamReader* self);
QTLIBC_API bool QXmlStreamReader_IsStartElement(const QXmlStreamReader* self);
QTLIBC_API bool QXmlStreamReader_IsEndElement(const QXmlStreamReader* self);
QTLIBC_API bool QXmlStreamReader_IsCharacters(const QXmlStreamReader* self);
QTLIBC_API bool QXmlStreamReader_IsWhitespace(const QXmlStreamReader* self);
QTLIBC_API bool QXmlStreamReader_IsCDATA(const QXmlStreamReader* self);
QTLIBC_API bool QXmlStreamReader_IsComment(const QXmlStreamReader* self);
QTLIBC_API bool QXmlStreamReader_IsDTD(const QXmlStreamReader* self);
QTLIBC_API bool QXmlStreamReader_IsEntityReference(const QXmlStreamReader* self);
QTLIBC_API bool QXmlStreamReader_IsProcessingInstruction(const QXmlStreamReader* self);
QTLIBC_API bool QXmlStreamReader_IsStandaloneDocument(const QXmlStreamReader* self);
QTLIBC_API long long QXmlStreamReader_LineNumber(const QXmlStreamReader* self);
QTLIBC_API long long QXmlStreamReader_ColumnNumber(const QXmlStreamReader* self);
QTLIBC_API long long QXmlStreamReader_CharacterOffset(const QXmlStreamReader* self);
QTLIBC_API libqt_string QXmlStreamReader_ReadElementText(QXmlStreamReader* self);
QTLIBC_API libqt_list /* of QXmlStreamNamespaceDeclaration* */ QXmlStreamReader_NamespaceDeclarations(const QXmlStreamReader* self);
QTLIBC_API void QXmlStreamReader_AddExtraNamespaceDeclaration(QXmlStreamReader* self, QXmlStreamNamespaceDeclaration* extraNamespaceDeclaraction);
QTLIBC_API void QXmlStreamReader_AddExtraNamespaceDeclarations(QXmlStreamReader* self, libqt_list /* of QXmlStreamNamespaceDeclaration* */ extraNamespaceDeclaractions);
QTLIBC_API libqt_list /* of QXmlStreamNotationDeclaration* */ QXmlStreamReader_NotationDeclarations(const QXmlStreamReader* self);
QTLIBC_API libqt_list /* of QXmlStreamEntityDeclaration* */ QXmlStreamReader_EntityDeclarations(const QXmlStreamReader* self);
QTLIBC_API int QXmlStreamReader_EntityExpansionLimit(const QXmlStreamReader* self);
QTLIBC_API void QXmlStreamReader_SetEntityExpansionLimit(QXmlStreamReader* self, int limit);
QTLIBC_API void QXmlStreamReader_RaiseError(QXmlStreamReader* self);
QTLIBC_API libqt_string QXmlStreamReader_ErrorString(const QXmlStreamReader* self);
QTLIBC_API int QXmlStreamReader_Error(const QXmlStreamReader* self);
QTLIBC_API bool QXmlStreamReader_HasError(const QXmlStreamReader* self);
QTLIBC_API void QXmlStreamReader_SetEntityResolver(QXmlStreamReader* self, QXmlStreamEntityResolver* resolver);
QTLIBC_API QXmlStreamEntityResolver* QXmlStreamReader_EntityResolver(const QXmlStreamReader* self);
QTLIBC_API libqt_string QXmlStreamReader_ReadElementText1(QXmlStreamReader* self, int behaviour);
QTLIBC_API void QXmlStreamReader_RaiseError1(QXmlStreamReader* self, libqt_string message);