src/qt/libqxmlstream.bf

using System;
using System.Interop;
namespace Qt;

[AllowDuplicates]
public enum QXmlStreamReader__TokenType
{
	NoToken = 0,
	Invalid = 1,
	StartDocument = 2,
	EndDocument = 3,
	StartElement = 4,
	EndElement = 5,
	Characters = 6,
	Comment = 7,
	DTD = 8,
	EntityReference = 9,
	ProcessingInstruction = 10,
}
[AllowDuplicates]
public enum QXmlStreamReader__ReadElementTextBehaviour
{
	ErrorOnUnexpectedElement = 0,
	IncludeChildElements = 1,
	SkipChildElements = 2,
}
[AllowDuplicates]
public enum QXmlStreamReader__Error
{
	NoError = 0,
	UnexpectedElementError = 1,
	CustomError = 2,
	NotWellFormedError = 3,
	PrematureEndOfDocumentError = 4,
}
public struct QXmlStreamAttribute
{
	[LinkName("QXmlStreamAttribute_new")]
	public static extern QXmlStreamAttribute* QXmlStreamAttribute_new();
	[LinkName("QXmlStreamAttribute_new2")]
	public static extern QXmlStreamAttribute* QXmlStreamAttribute_new2(libqt_string qualifiedName, libqt_string value);
	[LinkName("QXmlStreamAttribute_new3")]
	public static extern QXmlStreamAttribute* QXmlStreamAttribute_new3(libqt_string namespaceUri, libqt_string name, libqt_string value);
	[LinkName("QXmlStreamAttribute_new4")]
	public static extern QXmlStreamAttribute* QXmlStreamAttribute_new4(QXmlStreamAttribute* param1);
	[LinkName("QXmlStreamAttribute_IsDefault")]
	public static extern bool QXmlStreamAttribute_IsDefault(Self* c_this);
	[LinkName("QXmlStreamAttribute_OperatorEqual")]
	public static extern bool QXmlStreamAttribute_OperatorEqual(Self* c_this, QXmlStreamAttribute* other);
	[LinkName("QXmlStreamAttribute_OperatorNotEqual")]
	public static extern bool QXmlStreamAttribute_OperatorNotEqual(Self* c_this, QXmlStreamAttribute* other);
	[LinkName("QXmlStreamAttribute_OperatorAssign")]
	public static extern void QXmlStreamAttribute_OperatorAssign(Self* c_this, QXmlStreamAttribute* param1);
}
public struct QXmlStreamNamespaceDeclaration
{
	[LinkName("QXmlStreamNamespaceDeclaration_new")]
	public static extern QXmlStreamNamespaceDeclaration* QXmlStreamNamespaceDeclaration_new();
	[LinkName("QXmlStreamNamespaceDeclaration_new2")]
	public static extern QXmlStreamNamespaceDeclaration* QXmlStreamNamespaceDeclaration_new2(libqt_string prefix, libqt_string namespaceUri);
	[LinkName("QXmlStreamNamespaceDeclaration_OperatorEqual")]
	public static extern bool QXmlStreamNamespaceDeclaration_OperatorEqual(Self* c_this, QXmlStreamNamespaceDeclaration* other);
	[LinkName("QXmlStreamNamespaceDeclaration_OperatorNotEqual")]
	public static extern bool QXmlStreamNamespaceDeclaration_OperatorNotEqual(Self* c_this, QXmlStreamNamespaceDeclaration* other);
}
public struct QXmlStreamNotationDeclaration
{
	[LinkName("QXmlStreamNotationDeclaration_new")]
	public static extern QXmlStreamNotationDeclaration* QXmlStreamNotationDeclaration_new();
	[LinkName("QXmlStreamNotationDeclaration_OperatorEqual")]
	public static extern bool QXmlStreamNotationDeclaration_OperatorEqual(Self* c_this, QXmlStreamNotationDeclaration* other);
	[LinkName("QXmlStreamNotationDeclaration_OperatorNotEqual")]
	public static extern bool QXmlStreamNotationDeclaration_OperatorNotEqual(Self* c_this, QXmlStreamNotationDeclaration* other);
}
public struct QXmlStreamEntityDeclaration
{
	[LinkName("QXmlStreamEntityDeclaration_new")]
	public static extern QXmlStreamEntityDeclaration* QXmlStreamEntityDeclaration_new();
	[LinkName("QXmlStreamEntityDeclaration_OperatorEqual")]
	public static extern bool QXmlStreamEntityDeclaration_OperatorEqual(Self* c_this, QXmlStreamEntityDeclaration* other);
	[LinkName("QXmlStreamEntityDeclaration_OperatorNotEqual")]
	public static extern bool QXmlStreamEntityDeclaration_OperatorNotEqual(Self* c_this, QXmlStreamEntityDeclaration* other);
}
public struct QXmlStreamEntityResolver
{
	[LinkName("QXmlStreamEntityResolver_ResolveEntity")]
	public static extern libqt_string QXmlStreamEntityResolver_ResolveEntity(Self* c_this, libqt_string publicId, libqt_string systemId);
	[LinkName("QXmlStreamEntityResolver_ResolveUndeclaredEntity")]
	public static extern libqt_string QXmlStreamEntityResolver_ResolveUndeclaredEntity(Self* c_this, libqt_string name);
}
public struct QXmlStreamReader
{
	[LinkName("QXmlStreamReader_new")]
	public static extern QXmlStreamReader* QXmlStreamReader_new();
	[LinkName("QXmlStreamReader_new2")]
	public static extern QXmlStreamReader* QXmlStreamReader_new2(QIODevice* device);
	[LinkName("QXmlStreamReader_new3")]
	public static extern QXmlStreamReader* QXmlStreamReader_new3(libqt_string data);
	[LinkName("QXmlStreamReader_new4")]
	public static extern QXmlStreamReader* QXmlStreamReader_new4(libqt_string data);
	[LinkName("QXmlStreamReader_new5")]
	public static extern QXmlStreamReader* QXmlStreamReader_new5(char8[] data);
	[LinkName("QXmlStreamReader_SetDevice")]
	public static extern void QXmlStreamReader_SetDevice(Self* c_this, QIODevice* device);
	[LinkName("QXmlStreamReader_Device")]
	public static extern QIODevice* QXmlStreamReader_Device(Self* c_this);
	[LinkName("QXmlStreamReader_AddData")]
	public static extern void QXmlStreamReader_AddData(Self* c_this, libqt_string data);
	[LinkName("QXmlStreamReader_AddDataWithData")]
	public static extern void QXmlStreamReader_AddDataWithData(Self* c_this, libqt_string data);
	[LinkName("QXmlStreamReader_AddData2")]
	public static extern void QXmlStreamReader_AddData2(Self* c_this, char8[] data);
	[LinkName("QXmlStreamReader_Clear")]
	public static extern void QXmlStreamReader_Clear(Self* c_this);
	[LinkName("QXmlStreamReader_AtEnd")]
	public static extern bool QXmlStreamReader_AtEnd(Self* c_this);
	[LinkName("QXmlStreamReader_ReadNext")]
	public static extern int64 QXmlStreamReader_ReadNext(Self* c_this);
	[LinkName("QXmlStreamReader_ReadNextStartElement")]
	public static extern bool QXmlStreamReader_ReadNextStartElement(Self* c_this);
	[LinkName("QXmlStreamReader_SkipCurrentElement")]
	public static extern void QXmlStreamReader_SkipCurrentElement(Self* c_this);
	[LinkName("QXmlStreamReader_TokenType")]
	public static extern int64 QXmlStreamReader_TokenType(Self* c_this);
	[LinkName("QXmlStreamReader_TokenString")]
	public static extern libqt_string QXmlStreamReader_TokenString(Self* c_this);
	[LinkName("QXmlStreamReader_SetNamespaceProcessing")]
	public static extern void QXmlStreamReader_SetNamespaceProcessing(Self* c_this, bool namespaceProcessing);
	[LinkName("QXmlStreamReader_NamespaceProcessing")]
	public static extern bool QXmlStreamReader_NamespaceProcessing(Self* c_this);
	[LinkName("QXmlStreamReader_IsStartDocument")]
	public static extern bool QXmlStreamReader_IsStartDocument(Self* c_this);
	[LinkName("QXmlStreamReader_IsEndDocument")]
	public static extern bool QXmlStreamReader_IsEndDocument(Self* c_this);
	[LinkName("QXmlStreamReader_IsStartElement")]
	public static extern bool QXmlStreamReader_IsStartElement(Self* c_this);
	[LinkName("QXmlStreamReader_IsEndElement")]
	public static extern bool QXmlStreamReader_IsEndElement(Self* c_this);
	[LinkName("QXmlStreamReader_IsCharacters")]
	public static extern bool QXmlStreamReader_IsCharacters(Self* c_this);
	[LinkName("QXmlStreamReader_IsWhitespace")]
	public static extern bool QXmlStreamReader_IsWhitespace(Self* c_this);
	[LinkName("QXmlStreamReader_IsCDATA")]
	public static extern bool QXmlStreamReader_IsCDATA(Self* c_this);
	[LinkName("QXmlStreamReader_IsComment")]
	public static extern bool QXmlStreamReader_IsComment(Self* c_this);
	[LinkName("QXmlStreamReader_IsDTD")]
	public static extern bool QXmlStreamReader_IsDTD(Self* c_this);
	[LinkName("QXmlStreamReader_IsEntityReference")]
	public static extern bool QXmlStreamReader_IsEntityReference(Self* c_this);
	[LinkName("QXmlStreamReader_IsProcessingInstruction")]
	public static extern bool QXmlStreamReader_IsProcessingInstruction(Self* c_this);
	[LinkName("QXmlStreamReader_IsStandaloneDocument")]
	public static extern bool QXmlStreamReader_IsStandaloneDocument(Self* c_this);
	[LinkName("QXmlStreamReader_LineNumber")]
	public static extern int64 QXmlStreamReader_LineNumber(Self* c_this);
	[LinkName("QXmlStreamReader_ColumnNumber")]
	public static extern int64 QXmlStreamReader_ColumnNumber(Self* c_this);
	[LinkName("QXmlStreamReader_CharacterOffset")]
	public static extern int64 QXmlStreamReader_CharacterOffset(Self* c_this);
	[LinkName("QXmlStreamReader_ReadElementText")]
	public static extern libqt_string QXmlStreamReader_ReadElementText(Self* c_this);
	[LinkName("QXmlStreamReader_NamespaceDeclarations")]
	public static extern QXmlStreamNamespaceDeclaration[] QXmlStreamReader_NamespaceDeclarations(Self* c_this);
	[LinkName("QXmlStreamReader_AddExtraNamespaceDeclaration")]
	public static extern void QXmlStreamReader_AddExtraNamespaceDeclaration(Self* c_this, QXmlStreamNamespaceDeclaration* extraNamespaceDeclaraction);
	[LinkName("QXmlStreamReader_AddExtraNamespaceDeclarations")]
	public static extern void QXmlStreamReader_AddExtraNamespaceDeclarations(Self* c_this, QXmlStreamNamespaceDeclaration[] extraNamespaceDeclaractions);
	[LinkName("QXmlStreamReader_NotationDeclarations")]
	public static extern QXmlStreamNotationDeclaration[] QXmlStreamReader_NotationDeclarations(Self* c_this);
	[LinkName("QXmlStreamReader_EntityDeclarations")]
	public static extern QXmlStreamEntityDeclaration[] QXmlStreamReader_EntityDeclarations(Self* c_this);
	[LinkName("QXmlStreamReader_EntityExpansionLimit")]
	public static extern int32 QXmlStreamReader_EntityExpansionLimit(Self* c_this);
	[LinkName("QXmlStreamReader_SetEntityExpansionLimit")]
	public static extern void QXmlStreamReader_SetEntityExpansionLimit(Self* c_this, int32 limit);
	[LinkName("QXmlStreamReader_RaiseError")]
	public static extern void QXmlStreamReader_RaiseError(Self* c_this);
	[LinkName("QXmlStreamReader_ErrorString")]
	public static extern libqt_string QXmlStreamReader_ErrorString(Self* c_this);
	[LinkName("QXmlStreamReader_Error")]
	public static extern int64 QXmlStreamReader_Error(Self* c_this);
	[LinkName("QXmlStreamReader_HasError")]
	public static extern bool QXmlStreamReader_HasError(Self* c_this);
	[LinkName("QXmlStreamReader_SetEntityResolver")]
	public static extern void QXmlStreamReader_SetEntityResolver(Self* c_this, QXmlStreamEntityResolver* resolver);
	[LinkName("QXmlStreamReader_EntityResolver")]
	public static extern QXmlStreamEntityResolver* QXmlStreamReader_EntityResolver(Self* c_this);
	[LinkName("QXmlStreamReader_ReadElementText1")]
	public static extern libqt_string QXmlStreamReader_ReadElementText1(Self* c_this, int64 behaviour);
	[LinkName("QXmlStreamReader_RaiseError1")]
	public static extern void QXmlStreamReader_RaiseError1(Self* c_this, libqt_string message);
}
